# infinity

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  VERSION  conanfile.py
.github/: dependabot.yml
.github/workflows/: build-linux.yaml  build.yaml  docs.yaml  fuzzing.yaml  lint.yaml
bindings/: CMakeLists.txt
chess/: CMakeLists.txt
chess/include/cinfinity/: chess.hpp
cinfinity/: CMakeLists.txt
cinfinity/bindings/: CMakeLists.txt  cinfinity_cxx_bindings.cpp
cinfinity/core/: CMakeLists.txt
cinfinity/core/include/cinfinity/core/: queue_builder.hpp  transposition_table.hpp  transposition_table.inl  wdl.hpp  wdl.inl
cinfinity/include/cinfinity/: config.hpp  config.hpp.in  mcts_mode.hpp  model_handler.hpp  queue_builder.hpp  transposition_table.hpp  transposition_table.inl  transposition_table_new.hpp  wdl.hpp  write_pref_lock.hpp
cinfinity/include/cinfinity/bindings/: bindings.hpp
cinfinity/nn/include/cinfinity/nn/: model.hpp
cinfinity/src/: model_handler.cpp  transposition_table.cpp  x.hpp
cinfinity/tests/: CMakeLists.txt  fuzz_transposition_table.cpp  test_transposition_table.cpp  test_wdl.cpp
cmake/: get_deps.cmake
core/: CMakeLists.txt
core/include/cinfinity/core/: queue_builder.hpp  transposition_table.hpp  transposition_table.inl  wdl.hpp  wdl.inl
docs/: CMakeLists.txt
infinity/: pyproject.toml
infinity_training/: pyproject.toml  train.py
infinity_training/mcts/: mode.py  node.py
infinity_training/model/: __init__.py  schema.py  schema_old.py
infinity_training/model/layers/: attention.py  rope.py  spatial_attention.py  temporal_attention.py
memory/: CMakeLists.txt
memory/include/cinfinity/memory/: transposition_table.hpp  transposition_table.inl  wdl.hpp  wdl.inl
nn/: CMakeLists.txt  __main__.py  pyproject.toml
nn/include/cinfinity/nn/: model.hpp
nn/model/layers/: feed_forward.py
