[build-system]
requires = ["scikit-build-core>=0.10.0", "pybind11>=2.12.0"]
build-backend = "scikit_build_core.build"

[project]
name = "infinity-training"
description = "Training script for the CInfinity chess engine."
authors = [{ name = "Michael Piccirillo"}]
readme = "README.md"
license = { file = "../LICENSE" }
requires-python = ">=3.10"

dependencies = [
    "torch>=2.8.0",
    "typer>=0.19.2",
    "chess>=1.11.2",
    "onnxscript>=0.5.2",
    "torchvision>=0.23.0"
]

[project.urls]
homepage = "https://github.com/KhrySystemAI/infinity"
repository = "https://github.com/KhrySystemAI/infinity"